refactor workspace and correct logo

--- a/html/index.html
+++ b/html/index.html
@@ -7,14 +7,16 @@
         <title>VousLoger</title>
 		
 	    <link href="../lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-	    <link href="../lib/css/style.css" rel="stylesheet">
     </header>
 
     <body>
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#"><img src="../lib/image/home.png" style="height:80%;width:20%;">Vous Loger</a>
+					<a class="navbar-brand " href="#" style="padding:0px;margin-right:5px" title="Vous Loger">
+						<img src="../image/home.png" style="height:48px;width:48px;">
+					</a>
+					<a class="navbar-brand" href="#"><span>Vous Loger</span></a>
 				</div>
 				<div id="navbar">
 					<ul class="nav navbar-nav navbar-right">
